--- a/index.html
+++ b/index.html
@@ -4,24 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
                 <h1>Bela Juliana</h1>
-                <h4>WEB DESIGNER</h4>
+                <h3>WEB DESIGNER</h3>
+                <button type="button" class="btn btn-secondary">Work With Me</button>
+                <img src="img/IMG_9533.JPG" alt="" class="img-fluid">
             </div>
+        </div>
+        <div class="row">
             <div class="col-md-4">
-                <h2>Projects</h2>
-                <ul>
-                    <li>Project 1</li>
-                    <li>Project 2</li>
-                    <li>Project 3</li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <h2>Contact</h2>
-                <p>Email:
+                <h3>Hi, my name is</h3>
+                <h1>Bela Juliana</h1>
+                <p>I'm a passionate and detail-oriented web designer currently seeking new opportunities to bring creative, user-centered digital experiences to life. 
+                    With a strong foundation in HTML, CSS, JavaScript, and responsive design, I specialize in crafting visually appealing and functional websites that align with client goals and user needs. 
+                    My portfolio showcases a range of projects, from sleek landing pages to full-scale e-commerce platforms, each designed with usability and aesthetics in mind. 
+                    I'm excited to join a team where I can contribute my design skills, grow professionally, and help create outstanding digital products.</p>
+                <img src="img/IMG_9536.JPG" alt="" class="img-fluid">
+                <h1>WORK WITH ME</h1>
+                <img src="img/IMG_9529.JPG" alt="" class="img-fluid">
+                <h3>PHONE</h3>
+                <p>(123) 456 7890</p>
+                <h3>EMAIL</h3>
+                <p>hello@reallygreatsite.com</p>
+                 <i class="fi fi-brands-facebook"></i><link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-brands/css/uicons-brands.css'>
+                <i class="fi fi-brands-instagram"></i><link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-brands/css/uicons-brands.css'>
+                <i class="fi fi-brands-youtube"></i><link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-brands/css/uicons-brands.css'>
+             </div>        
+        </div>
+     </div>                
 </body>
 </html>
